--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: node_js
 node_js:
     - '10'
 install:
-    - npm install
+    - npm install && npm test
 script:
-    - npm run deploy
+    - npm run build
 deploy:
     provider: pages
     skip-cleanup: true
