--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: node_js
 node_js:
     - '10'
 install:
-    - npm install && npm test
+    - npm install
 script:
-    - npm run build
+    - npm test && npm run build
 deploy:
     provider: pages
     skip-cleanup: true
