Changing project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "webjump-react-commerce",
+    "name": "react-commerce",
     "version": "1.0.0",
     "private": false,
     "main": "index.js",
