--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "scripts": {
         "start": "webpack-dev-server --mode development --port 3000 --https --open",
         "build": "webpack --mode production",
-        "test": "jest"
+        "test": "jest",
+        "api": "nodemon server/index.js"
     },
     "dependencies": {
         "@babel/polyfill": "^7.0.0",
         "@babel/runtime": "^7.2.0",
         "babel-plugin-module-resolver": "^3.1.3",
+        "express": "^4.16.4",
         "prop-types": "^15.6.2",
         "react": "^16.8.2",
         "react-dom": "^16.6.3",
@@ -32,11 +34,13 @@
         "babel-plugin-styled-components": "^1.10.0",
         "enzyme": "^3.7.0",
         "enzyme-adapter-react-16": "^1.7.0",
+        "faker": "^4.1.0",
         "file-loader": "^1.1.11",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^1.3.1",
         "jest": "^23.6.0",
+        "nodemon": "^1.18.10",
         "prettier": "^1.16.4",
         "pretty-quick": "^1.10.0",
         "react-test-renderer": "^16.6.3",
