--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "webpack --mode production",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d dist",
-        "test": "jest"
+        "test": "jest",
+        "storybook": "start-storybook -p 9001 -c .storybook"
     },
     "dependencies": {
         "@babel/polyfill": "^7.0.0",
@@ -28,6 +29,7 @@
         "@babel/plugin-transform-runtime": "^7.2.0",
         "@babel/preset-env": "^7.2.0",
         "@babel/preset-react": "^7.0.0",
+        "@storybook/react": "^4.1.13",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^23.6.0",
         "babel-loader": "^8.0.4",
