--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "webpack --mode production",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d dist",
-        "test": "jest"
+        "test": "jest --watchAll"
     },
     "dependencies": {
         "@babel/polyfill": "^7.0.0",
