--- a/package.json
+++ b/package.json
@@ -79,5 +79,6 @@
             "./__tests__/initial-configuration.js"
         ],
         "collectCoverage": false
-    }
+    },
+    "cleanSrc": "rimraf dist/src"
 }
