--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "^16.8.2",
         "react-dom": "^16.6.3",
         "react-router-dom": "^4.3.1",
+        "react-sidebar": "^3.0.2",
         "script-ext-html-webpack-plugin": "^2.1.3",
         "styled-components": "^4.1.3"
     },
