--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ deploy:
     github-token: $GITHUB_TOKEN
     keep-history: true
     project: ./dist/
+    local_dir: ./dist/
     on:
         branch: master
