--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
         "predeploy": "npm run build",
         "deploy": "gh-pages -d dist",
         "test": "jest",
-        "storybook": "start-storybook -p 9001 -c .storybook",
-        "fake": "nodemon fake/server.js"
+        "storybook": "start-storybook -p 9001 -c .storybook"
     },
     "dependencies": {
         "@babel/polyfill": "^7.0.0",
@@ -37,11 +36,9 @@
         "babel-jest": "^23.6.0",
         "babel-loader": "^8.0.4",
         "babel-plugin-styled-components": "^1.10.0",
-        "body-parser": "^1.18.3",
         "clean-webpack-plugin": "^1.0.1",
         "enzyme": "^3.7.0",
         "enzyme-adapter-react-16": "^1.7.0",
-        "faker": "^4.1.0",
         "file-loader": "^1.1.11",
         "gh-pages": "^2.0.1",
         "html-loader": "^0.5.5",
@@ -49,9 +46,6 @@
         "husky": "^1.3.1",
         "jest": "^23.6.0",
         "jest-dom": "^3.1.2",
-        "json-server": "^0.14.2",
-        "jsonwebtoken": "^8.5.0",
-        "nodemon": "^1.18.10",
         "prettier": "^1.16.4",
         "pretty-quick": "^1.10.0",
         "react-test-renderer": "^16.6.3",
